src/ui/modules/library-sidebar/index.less
.library-sidebar-wrapper {
  height: 100%;
  width: 220px;
  border-right: 1px solid rgba(0, 0, 0, 0.04);
  cursor: default;
  user-select: none;
  background-color: rgba(235, 235, 235, 0.8);
  display: flex;
  flex-direction: column;
  flex-flow: column;
  flex-shrink: 0;
  min-width: 0;

  .library-sidebar-main {
    overflow: auto;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    flex-flow: column;

    .library-sidebar-menu {
      overflow: auto;
      padding-bottom: 40px;
      flex-grow: 1;
    }

    .library-sidebar-footer {
      height: 40px;
      flex-shrink: 0;
      padding-left: 28px;
      line-height: 40px;

      &:hover {
        cursor: pointer;
        background-color: rgb(220, 220, 220);
      }

      .footer-text {
        margin-left: 6px;
      }
    }
  }

  .library-next-writer {
    margin-left: 28px;
    padding-block-start: 4px;
    padding-block-end: 8px;
    font-weight: bold;
    flex-shrink: 0;
  }

  ._next_writer-menu-root {
    background-color: transparent;

    ._next_writer-menu._next_writer-menu-sub._next_writer-menu-inline {
      background-color: transparent;
    }
  }

  .library-sidebar-icon {
    padding: 4px;
    border-radius: 4px;
    display: inline-flex;
    vertical-align: -2px;
    opacity: .1;

    &:hover {
      cursor: pointer;
      opacity: 1;
      background-color: rgba(0, 0, 0, 0.08);
    }
  }

  ._next_writer-menu-item-selected {
    color: unset;
    background-color: rgba(0, 0, 0, 0.06);
  }
}

.library-detail-wrapper {
  width: 300px;
  border-right: 1px solid rgba(0, 0, 0, 0.1);
  background-color: white;
  padding: 16px;
  flex-shrink: 0;
  min-width: 0;
  height: 100%;
  box-sizing: border-box;

  display: flex;
  flex-direction: column;
  flex-flow: column;
  position: relative;
}

.library-detail-header {
  height: 40px;
  line-height: 40px;
  user-select: none;
  box-sizing: border-box;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  flex-shrink: 0;
  min-height: 0;
  box-sizing: border-box;

  .library-detail-icon {
    padding: 4px;
    border-radius: 4px;
    display: inline-flex;
    vertical-align: -2px;

    &:hover {
      cursor: pointer;
      background-color: rgba(0, 0, 0, 0.08);
    }
  }
}

.library-detail-item-wrapper {
  flex-grow: 1;
  overflow: auto;
}

.library-detail-item {
  padding: 10px;
  cursor: pointer;
  border-radius: 2px;

  &:not(.library-detail-item-selected):hover {
    background-color: rgba(0, 0, 0, 0.02);
  }

  .library-detail-item-text {
    margin: 0;
    color: inherit;
  }
}

.library-detail-item-active {
  background-color: rgba(0, 0, 0, 0.02);
}

.library-detail-item-selected {
  background-color: rgba(0, 0, 0, 0.06);
  // background-color: #e6f4ff;
  // color: #1677ff;
}

.library-sidebar-spin-wrapper {
  width: 512px;
  position: fixed;
  left: 0;
  top: 0;
  z-index: 1;
  background-color: rgba(255, 255, 255, 0.45);
  height: 100%;

  .library-sidebar-spin {
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

